--- a/app/views/admin/tickets/index.erb
+++ b/app/views/admin/tickets/index.erb
@@ -6,37 +6,36 @@
   </div>
   <div class="row">
     <div class="col-lg-12">
-      <form>
+    <%= form_tag check_admin_event_tickets_path, method: :get, class: "" do %>
         <div class="input-group">
-          <input type="search" name="query" class="form-control input-lg" value="<%= params[:query] %>">
+          <%= search_field_tag :number, nil, class: "form-control input-lg", placeholder: @ticket.try(:number) %>
+          <%= hidden_field_tag :event_id, @event.id %>
           <div class="input-group-btn">
-            <button type="submit" class="btn btn-default btn-lg" action='<%= admin_event_path(@event, query: params[:query]) %>'>Check</button>
-            <%= link_to "PDF", admin_event_path(@event, format: 'pdf'),  class: "btn btn-default btn-lg" %>
+            <%= submit_tag "Check", class: "btn btn-default btn-lg" %>
+            <%= link_to "PDF", admin_event_tickets_path(@event, format: 'pdf'),  class: "btn btn-default btn-lg" %>
           </div>
         </div>
-      </form>
+      <% end %>
       <br>
       <table class="table table-striped table-bordered" id="admin-customers">
         <thead>
           <tr>
+            <th>Ticket</th>
+            <th>Checked?</th>
             <th>Name</th>
             <th>Email</th>
             <th>CC</th>
-            <th>Quantity</th>
-            <th>Ticket</th>
-            <th>Checked?</th>
             <th></th>
           </tr>
         </thead>
         <tbody>
           <% @tickets.each do |ticket| %>
           <tr>
+            <td><%= ticket.number %></td>
+            <td><span class="label label-info"><%= ticket.admitted ? ticket.admitted.strftime("%b %e, %l:%M %p") : "no" %></span></td>
             <td><%= ticket.order.name %> </td>
             <td><%= ticket.order.email %> </td>
             <td><%= ticket.order.last4 %> </td>
-            <td><%= ticket.order.quantity %></td>
-            <td><%= ticket.number %></td>
-            <td><span class="label label-info"><%= ticket.admitted ? time_tag(ticket.admitted) : "no" %></span></td>
             <td><%= link_to "view", order_path(ticket.order) %></td>
           </tr>
           <% end %>
