--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -68,6 +68,7 @@
           <% end %>
         </tbody>
       </table>
+      <%= will_paginate @orders, renderer: BootstrapPagination::Rails %>
     </div>
   </div>
 </div>
