--- a/app/views/admin/tickets/index.erb
+++ b/app/views/admin/tickets/index.erb
@@ -41,6 +41,7 @@
           <% end %>
         </tbody>
       </table>
+      <%= will_paginate @tickets, renderer: BootstrapPagination::Rails %>
     </div>
   </div>
 </div>
