--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -74,7 +74,7 @@
                 <td><%= link_to "#{event.name} in #{event.location}", event_path(event) %></td>
                 <td><%= event.is_visible %></td>
                 <td><span class="badge"><%= event.earnings %></span></td>
-                <td><span class="badge"><%= event.tickets_sold %>/<%= event.tickets_left %></span></td>
+                <td><span class="badge"><%= event.tickets_sold %>/<%= event.target %></span></td>
                 <td><%= event.left_to_go %> to go</td>
                 <td><%= link_to "admin", admin_event_path(event), class: "" %></td>
                 <td><%= link_to "edit", edit_admin_event_path(event) %></td>
