rewritten mailer tests

--- a/app/views/notifier/event_cancelled.text.erb
+++ b/app/views/notifier/event_cancelled.text.erb
@@ -4,7 +4,7 @@ Hello!
 
 The <%= @event.user.name %> gave the following reason:
 
-<%= @message %>
+<%= @message.message %>
 
 You're order has been cancelled.
 
