--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-6 col-lg-offset-2">
-      <h3 class="page-header">Sign In</h3>
+      <h3 class="page-header">Sign Up</h3>
         <%= render 'form' %>
     </div>
   </div>
