--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -42,7 +42,7 @@
   <div class="form-group">
   <div class="col-lg-offset-2 col-lg-6">
     <div class=''>
-      <button type="submit" class="btn btn-primary ">Create New Event</button>
+      <button type="submit" class="btn btn-primary ">Submit</button>
       <%= link_to "Cancel", user_path(current_user), class: "btn btn-default" %>
     </div>
   </div>
