--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,5 +1,13 @@
 <div class="row">
   <div class="col-lg-8 col-lg-offset-2 well">
+  <% if @event.errors.any? %>
+    <div class="alert alert-danger" >
+      <a class="close" data-dismiss="alert">&#215;</a>
+      <% @event.errors.full_messages.each do |msg| %>
+        <%= content_tag :div, msg %>
+      <% end %>
+    </div>
+  <% end %>
   <h3 class="page-header"><%= controller.action_name.capitalize %> Event</h3>
   <%= form_for [:admin, @event], html: {class: 'form form-horizontal', role: 'form'} do |f| %>
   <div class="form-group">
