--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
           <div class="col-lg-10 col-lg-offset-2">
-            <%= f.submit "Update Password", class: "btn btn-default" %>
+            <%= f.submit "Change Password", class: "btn btn-default" %>
           </div>
         </div>
       <% end %>
