--- a/app/views/order_mailer/event_deferred.text.erb
+++ b/app/views/order_mailer/event_deferred.text.erb
@@ -1,14 +1,12 @@
 Hello!
 
-<%= @event.name %> in <%= @event.location %> has been deferred until <%= time_tag(@date) %>
+<%= @event.name %> in <%= @event.location %> has been deferred until <%= @date%>
 
 The <%= @event.user.name %> gave the following reason:
 
 <%= @message %>
 
 If you wish, you can cancel your order now by visiting this link:
-
-<%#= cancel_orders_url todo like password reset controller%>
 
 Thanks!
 
