--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -18,6 +18,7 @@
       </div>
     </div>
   </div>
+  <a class="next-chapter" href="#services">find out more <i class="fa fa-chevron-down"></i></a>
 </section>
 <section id="services" class="services">
   <div class="">
