--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -57,6 +57,41 @@ body {
   a {color:white;}
 }
 
+a.next-chapter {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.next-chapter {
+  position: absolute;
+  z-index: 3;
+  bottom: 40px;
+  left: 50%;
+  margin-left: -25px;
+}
+
+.next-chapter h3 {
+  font-weight: 300;
+}
+.next-chapter .caret {
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  width: 50px;
+  height: 50px;
+  content: ">";
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg);
+  font-size: 80px;
+  font-weight: 100;
+  line-height: 0.36;
+}
+
+
 /* Intro */
 
 .intro {
