--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -1,5 +1,15 @@
 // events index
 // scoped to events controller
+#event-banner {
+  display: table;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  height: 400px;
+}
+
+
 .event-map,
 .thumbnails li {
   @include media-between($small-min, $small-max) {
@@ -21,7 +31,10 @@
 }
 
 //event show
-
+.search {position: relative;}
+.clear-search {
+  left: 75%;
+}
 .flex-embed {
   position: relative;
   padding-top: 25px;
@@ -48,12 +61,11 @@
 }
 
 .event-header {
-  h1, h2, h3, small, a, dt, dd {
+  h1, h2 {
     color: white;
     text-shadow: 3px 4px 5px #000;
+    font-size: 60px;
   }
-  .dropdown-menu a {text-shadow: none;}
-  padding: 20px;
 }
 
 
@@ -64,16 +76,20 @@
 }
 
 #event-information  {
+  margin-top: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 10px;
   .progress  {
-    height: 40px;
+    height: 24px;
   }
   .progress-bar {
-    font-size: 20px;
+    font-size: 18px;
   }
 }
 
 .price, i {
-  font-size: 20px;
+  font-size: 24px;
 }
 
 .portfolio-item {
@@ -82,6 +98,10 @@
 
 .hideme {
   display: none;
+}
+
+#event-media {
+  background: #ffffff;
 }
 
 
