--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,11 +2,10 @@
 	<div class="row">
 		<div class="col-lg-12">
       <form>
-        <div class="input-group">
+        <div class="input-group search">
           <input type="search" name="query" results=5 class="form-control input-lg" value="<%= params[:query] %>">
           <div class="input-group-btn">
             <button type="submit" class="btn btn-default btn-lg" action='<%= events_path(query: params[:query]) %>'>Search</button>
-            <button type="submit" class="btn btn-default btn-lg" action="/events">Reset</button>
           </div>
         </div>
       </form>
