--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -13,7 +13,8 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-3 text-center">
         <h2>100 Motels?</h2>
-        <p class="lead">Hi there and welcome! My band's music is free and we'll never have a record label backing us. I made 100 Motels so we could try out possible tour dates without worrying about nobody showing up or losing loads of money. </p>
+        <p class="lead">Touring without a label backing you up is tough. I found myself not playing shows because of money worries and uncertainty over the likely attendances. I built 100 motels to ease those worries, I hope it can help you too! </p>
+        <!-- <p class="lead"><em><small>- Seo Cahill, Crete Boom.</small></em></p> -->
         <%= link_to "Try it Free", users_path, method: :post, class: "btn btn-success btn-lg" %>
       </div>
     </div>
@@ -23,24 +24,18 @@
 <section id="services" class="services">
   <div class="">
     <div class="row">
-      <div class="col-md-4 col-md-offset-4 text-center">
-        <!-- <h2>What you need to do...</h2> -->
-        <!-- <hr> -->
-      </div>
-    </div>
-    <div class="row">
       <div class="col-md-2 col-md-offset-2 text-center">
         <div class="service-item">
           <i class="service-icon fa fa-credit-card"></i>
           <h4>Sign up and connect with Stripe</h4>
-          <p>You need to do this to receive money. Stripe also provide us with the means to verify your identity.</p>
+          <p>We use Stripe to collect and pay out money. Stripe also provide us with the means to verify your identity.</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
         <div class="service-item">
           <i class="service-icon fa fa-pencil"></i>
           <h4>Create a Page for your Tour</h4>
-          <p>Just embed a poster or add soundclouds, videos, maps and text in markdown. Add as many dates as you want.</p>
+          <p>Just embed a poster or add soundclouds, videos, maps and text in markdown. Create as many dates as you want.</p>
         </div>
       </div>
       <div class="col-md-2 text-center">
